--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-.container-fluid {
+* {
   background-color: #404258;
 }
 .col {
@@ -50,21 +50,27 @@ a:hover {
 
 h1 {
   font-family: Lato-Bold, Assistant-Regular, sans-serif;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.2em;
 }
 h3 {
   font-family: Assistant-Regular, sans-serif;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.2em;
 }
 .btn-outline-primary {
   border: 2px solid rgb(255, 255, 255, 0.3);
   font-family: Assistant-Regular;
+
   color: white;
+  box-shadow: -5px 9px 13px 0px #ffffff;
 }
 .btn-outline-primary:hover {
   border: 2px solid rgb(255, 255, 255, 0.3);
   background-color: rgba(255, 255, 255, 0.5);
   color: black;
+  font-family: Assistant-Bold;
+  box-shadow: -5px 9px 13px 0px rgb(0, 0, 0, 0.3);
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 .btn {
@@ -72,10 +78,4 @@ h3 {
   --bs-btn-active-color: black;
   --bs-btn-active-bg: rgba(255, 255, 255, 1);
   --bs-btn-active-border-color: rgba(255, 255, 255, 1);
-}
-
-@media screen and (max-width: 400) {
-  body {
-    background-color: red;
-  }
 }
