--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 * {
   background-color: #404258;
 }
+
 .col {
   width: 100%;
   height: 100vh;
@@ -21,11 +22,15 @@ ion-icon {
   object-fit: cover;
   border-radius: 10%;
 }
-.image:hover {
+.card {
+  background-color: transparent;
+  border: none;
+}
+.card:hover {
   cursor: pointer;
   filter: drop-shadow(-21px 15px 12px rgba(0, 0, 0));
   transform: scale(1.1);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
   transition: 0.3s;
 }
 .social {
